--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Decentralized Real Estate using Blockchain technology",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,30 @@
     "aws-cdk-local": "^1.65.8",
     "aws-sdk": "^2.1067.0",
     "aws-serverless-express": "^3.4.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "axios": "^0.21.1",
+    "bcryptjs": "2.4.3",
+    "body-parser": "^1.17.0",
+    "compression": "^1.6.2",
+    "cors": "^2.8.3",
+    "dotenv-safe": "^8.2.0",
+    "express-validation": "^1.0.2",
+    "helmet": "^4.6.0",
+    "http-status": "^1.0.1",
+    "joi": "^10.4.1",
+    "jwt-simple": "0.5.6",
+    "lodash": "^4.17.4",
+    "mongoose": "^5.2.17",
+    "morgan": "^1.8.1",
+    "nodemailer": "^6.3.1",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "4.0.0",
+    "uuid": "^3.1.0",
+    "winston": "^3.1.0",
+    "moment-timezone": "^0.5.13"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
