--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "passport-jwt": "4.0.0",
     "uuid": "^3.1.0",
     "winston": "^3.1.0",
-    "moment-timezone": "^0.5.13"
+    "moment-timezone": "^0.5.13",
+    "bluebird": "^3.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
